python/pyfreefare/libfreefare.pxd


    MifareDESFireAID mifare_desfire_aid_new_with_mad_aid(MadAid mad_aid, uint8_t n)

    uint32_t mifare_desfire_aid_get_aid(MifareDESFireAID aid)

    uint8_t mifare_desfire_last_pcd_error(FreefareTag tag)

    uint8_t mifare_desfire_last_picc_error(FreefareTag tag)

    cdef struct mifare_desfire_version_info_hw:
        uint8_t vendor_id
        uint8_t type
        uint8_t subtype
        uint8_t version_major
        uint8_t version_minor
        uint8_t storage_size
        uint8_t protocol

    cdef struct mifare_desfire_version_info_sw:
        uint8_t vendor_id
        uint8_t type
        uint8_t subtype
        uint8_t version_major
        uint8_t version_minor
        uint8_t storage_size
        uint8_t protocol

    cdef struct mifare_desfire_version_info:
        mifare_desfire_version_info_hw hardware
        mifare_desfire_version_info_sw software
        uint8_t[7] uid
        uint8_t[5] batch_number
        uint8_t production_week
        uint8_t production_year

    cdef struct _mifare_desfire_file_settings_settings_settings_standard_file_s:
        uint32_t file_size

    cdef struct _mifare_desfire_file_settings_settings_settings_value_file_s:
        int32_t lower_limit
        int32_t upper_limit
        int32_t limited_credit_value
        uint8_t limited_credit_enabled

    cdef struct _mifare_desfire_file_settings_settings_settings_linear_record_file_s:
        uint32_t record_size
        uint32_t max_number_of_records
        uint32_t current_number_of_records

    cdef union _mifare_desfire_file_settings_settings_u:
        _mifare_desfire_file_settings_settings_settings_standard_file_s standard_file
        _mifare_desfire_file_settings_settings_settings_value_file_s value_file
        _mifare_desfire_file_settings_settings_settings_linear_record_file_s linear_record_file

    cdef struct mifare_desfire_file_settings:
        uint8_t file_type
        uint8_t communication_settings
        uint16_t access_rights
        _mifare_desfire_file_settings_settings_u settings

    FreefareTag mifare_desfire_tag_new(nfc_device* device, nfc_target target)

    void mifare_desfire_tag_free(FreefareTag tags)

    int mifare_desfire_connect(FreefareTag tag)

    int mifare_desfire_disconnect(FreefareTag tag)

    int mifare_desfire_authenticate(FreefareTag tag, uint8_t key_no, MifareDESFireKey key)

    int mifare_desfire_authenticate_iso(FreefareTag tag, uint8_t key_no, MifareDESFireKey key)

    int mifare_desfire_authenticate_aes(FreefareTag tag, uint8_t key_no, MifareDESFireKey key)

    int mifare_desfire_change_key_settings(FreefareTag tag, uint8_t settings)

    int mifare_desfire_get_key_settings(FreefareTag tag, uint8_t* settings, uint8_t* max_keys)

    int mifare_desfire_change_key(FreefareTag tag, uint8_t key_no, MifareDESFireKey new_key, MifareDESFireKey old_key)

    int mifare_desfire_get_key_version(FreefareTag tag, uint8_t key_no, uint8_t* version)

    int mifare_desfire_create_application(FreefareTag tag, MifareDESFireAID aid, uint8_t settings, uint8_t key_no)

    int mifare_desfire_create_application_3k3des(FreefareTag tag, MifareDESFireAID aid, uint8_t settings, uint8_t key_no)

    int mifare_desfire_create_application_aes(FreefareTag tag, MifareDESFireAID aid, uint8_t settings, uint8_t key_no)

    int mifare_desfire_create_application_iso(FreefareTag tag, MifareDESFireAID aid, uint8_t settings, uint8_t key_no, int want_iso_file_identifiers, uint16_t iso_file_id, uint8_t* iso_file_name, size_t iso_file_name_len)

    int mifare_desfire_create_application_3k3des_iso(FreefareTag tag, MifareDESFireAID aid, uint8_t settings, uint8_t key_no, int want_iso_file_identifiers, uint16_t iso_file_id, uint8_t* iso_file_name, size_t iso_file_name_len)

    int mifare_desfire_create_application_aes_iso(FreefareTag tag, MifareDESFireAID aid, uint8_t settings, uint8_t key_no, int want_iso_file_identifiers, uint16_t iso_file_id, uint8_t* iso_file_name, size_t iso_file_name_len)

    int mifare_desfire_delete_application(FreefareTag tag, MifareDESFireAID aid)

    int mifare_desfire_get_application_ids(FreefareTag tag, MifareDESFireAID* aids[], size_t* count)

    int mifare_desfire_get_df_names(FreefareTag tag, MifareDESFireDF* dfs[], size_t* count)

    void mifare_desfire_free_application_ids(MifareDESFireAID aids[])

    int mifare_desfire_select_application(FreefareTag tag, MifareDESFireAID aid)

    int mifare_desfire_format_picc(FreefareTag tag)

    int mifare_desfire_get_version(FreefareTag tag, mifare_desfire_version_info* version_info)

    int mifare_desfire_free_mem(FreefareTag tag, uint32_t* size)

    int mifare_desfire_set_configuration(FreefareTag tag, bint disable_format, bint enable_random_uid)

    int mifare_desfire_set_default_key(FreefareTag tag, MifareDESFireKey key)

    int mifare_desfire_set_ats(FreefareTag tag, uint8_t* ats)

    int mifare_desfire_get_card_uid(FreefareTag tag, char** uid)

    int mifare_desfire_get_card_uid_raw(FreefareTag tag, uint8_t uid[7])

    int mifare_desfire_get_file_ids(FreefareTag tag, uint8_t** files, size_t* count)

    int mifare_desfire_get_iso_file_ids(FreefareTag tag, uint16_t** files, size_t* count)

    int mifare_desfire_get_file_settings(FreefareTag tag, uint8_t file_no, mifare_desfire_file_settings* settings)

    int mifare_desfire_change_file_settings(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights)

    int mifare_desfire_create_std_data_file(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, uint32_t file_size)

    int mifare_desfire_create_std_data_file_iso(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, uint32_t file_size, uint16_t iso_file_id)

    int mifare_desfire_create_backup_data_file(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, uint32_t file_size)

    int mifare_desfire_create_backup_data_file_iso(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, uint32_t file_size, uint16_t iso_file_id)

    int mifare_desfire_create_value_file(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, int32_t lower_limit, int32_t upper_limit, int32_t value, uint8_t limited_credit_enable)

    int mifare_desfire_create_linear_record_file(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, uint32_t record_size, uint32_t max_number_of_records)

    int mifare_desfire_create_linear_record_file_iso(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, uint32_t record_size, uint32_t max_number_of_records, uint16_t iso_file_id)

    int mifare_desfire_create_cyclic_record_file(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, uint32_t record_size, uint32_t max_number_of_records)

    int mifare_desfire_create_cyclic_record_file_iso(FreefareTag tag, uint8_t file_no, uint8_t communication_settings, uint16_t access_rights, uint32_t record_size, uint32_t max_number_of_records, uint16_t iso_file_id)

    int mifare_desfire_delete_file(FreefareTag tag, uint8_t file_no)

    ssize_t mifare_desfire_read_data(FreefareTag tag, uint8_t file_no, off_t offset, size_t length, void* data)

    ssize_t mifare_desfire_read_data_ex(FreefareTag tag, uint8_t file_no, off_t offset, size_t length, void* data, int cs)

    ssize_t mifare_desfire_write_data(FreefareTag tag, uint8_t file_no, off_t offset, size_t length, const void* data)

    ssize_t mifare_desfire_write_data_ex(FreefareTag tag, uint8_t file_no, off_t offset, size_t length, const void* data, int cs)

    int mifare_desfire_get_value(FreefareTag tag, uint8_t file_no, int32_t* value)

    int mifare_desfire_get_value_ex(FreefareTag tag, uint8_t file_no, int32_t* value, int cs)

    int mifare_desfire_credit(FreefareTag tag, uint8_t file_no, int32_t amount)

    int mifare_desfire_credit_ex(FreefareTag tag, uint8_t file_no, int32_t amount, int cs)

    int mifare_desfire_debit(FreefareTag tag, uint8_t file_no, int32_t amount)

    int mifare_desfire_debit_ex(FreefareTag tag, uint8_t file_no, int32_t amount, int cs)

    int mifare_desfire_limited_credit(FreefareTag tag, uint8_t file_no, int32_t amount)

    int mifare_desfire_limited_credit_ex(FreefareTag tag, uint8_t file_no, int32_t amount, int cs)

    ssize_t mifare_desfire_write_record(FreefareTag tag, uint8_t file_no, off_t offset, size_t length, void* data)

    ssize_t mifare_desfire_write_record_ex(FreefareTag tag, uint8_t file_no, off_t offset, size_t length, void* data, int cs)

    ssize_t mifare_desfire_read_records(FreefareTag tag, uint8_t file_no, off_t offset, size_t length, void* data)

    ssize_t mifare_desfire_read_records_ex(FreefareTag tag, uint8_t file_no, off_t offset, size_t length, void* data, int cs)

    int mifare_desfire_clear_record_file(FreefareTag tag, uint8_t file_no)

    int mifare_desfire_commit_transaction(FreefareTag tag)

    int mifare_desfire_abort_transaction(FreefareTag tag)

    MifareDESFireKey mifare_desfire_des_key_new(const uint8_t value[8])

    MifareDESFireKey mifare_desfire_3des_key_new(const uint8_t value[16])

    MifareDESFireKey mifare_desfire_des_key_new_with_version(const uint8_t value[8])

    MifareDESFireKey mifare_desfire_3des_key_new_with_version(const uint8_t value[16])

    MifareDESFireKey mifare_desfire_3k3des_key_new(const uint8_t value[24])

    MifareDESFireKey mifare_desfire_3k3des_key_new_with_version(const uint8_t value[24])

    MifareDESFireKey mifare_desfire_aes_key_new(const uint8_t value[16])

    MifareDESFireKey mifare_desfire_aes_key_new_with_version(const uint8_t value[16], uint8_t version)

    uint8_t mifare_desfire_key_get_version(MifareDESFireKey key)

    void mifare_desfire_key_set_version(MifareDESFireKey key, uint8_t version)

    mifare_key_type mifare_desfire_key_get_type(MifareDESFireKey key);

    void mifare_desfire_key_free(MifareDESFireKey key)

    uint8_t* tlv_encode(const uint8_t type, const uint8_t* istream, uint16_t isize, size_t* osize)

    uint8_t* tlv_decode(const uint8_t* istream, uint8_t* type, uint16_t* size)

    size_t tlv_record_length(const uint8_t* istream, size_t* field_length_size, size_t* field_value_size)

    uint8_t* tlv_append(uint8_t* a, uint8_t* b)

    cdef struct mifare_key_deriver:
        MifareDESFireKey master_key
        MifareKeyType output_key_type
        uint8_t m[32]
        int len
        int flags

    ctypedef mifare_key_deriver* MifareKeyDeriver

    MifareKeyDeriver mifare_key_deriver_new_an10922(MifareDESFireKey master_key, MifareKeyType output_key_type, int flags)

    int mifare_key_deriver_begin(MifareKeyDeriver deriver)

    int mifare_key_deriver_update_data(MifareKeyDeriver deriver, const uint8_t* data, size_t len)

    int mifare_key_deriver_update_uid(MifareKeyDeriver deriver, FreefareTag tag)

    int mifare_key_deriver_update_aid(MifareKeyDeriver deriver, MifareDESFireAID aid)

    int mifare_key_deriver_update_cstr(MifareKeyDeriver deriver, const char* cstr)

    MifareDESFireKey mifare_key_deriver_end(MifareKeyDeriver deriver)

    int mifare_key_deriver_end_raw(MifareKeyDeriver deriver, uint8_t* diversified_bytes, size_t data_max_len)

    void mifare_key_deriver_free(MifareKeyDeriver state)
